--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -3,7 +3,7 @@
 	"compilerOptions": {
 		"module": "esnext",
 		"outDir": "../../dist",
-		"target": "es2022",
+		"target": "esnext",
 		"useDefineForClassFields": true
 	},
 	"include": [
